--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -973,6 +973,9 @@
                                                     <state key="normal" image="paperplane" catalog="system">
                                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="sendRequest:" destination="aqZ-UF-bkQ" eventType="touchUpInside" id="LSd-Ye-wpi"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -996,7 +999,6 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="nameLabel" destination="IwG-nF-lDB" id="3bm-66-s82"/>
-                                            <outlet property="sendButton" destination="FEd-WX-Nl4" id="QDC-RN-q8d"/>
                                             <outlet property="userIdLabel" destination="bJi-KC-qsd" id="Awd-Kc-cYU"/>
                                         </connections>
                                     </tableViewCell>
@@ -1912,7 +1914,7 @@
                                         <rect key="frame" x="0.0" y="115" width="375" height="326"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ogD-LH-7Su" userLabel="Friends Table View">
-                                                <rect key="frame" x="0.0" y="39" width="375" height="372"/>
+                                                <rect key="frame" x="0.0" y="38.666666666666686" width="375" height="372.33333333333331"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="myFriendsCell" rowHeight="60" id="wGo-B5-PcN" userLabel="Friends Table View Cell" customClass="MyFriendsTableViewCell" customModule="ajite" customModuleProvider="target">
